...
            "value": "Löschen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        },
        "es-mx": {
          "stringUnit": {
            "state": "translated",
            "value": "Eliminar"
...
            "value": "Neues Archiv"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Archive"
          }
        },
        "es-mx": {
          "stringUnit": {
            "state": "translated",
            "value": "Crear archivo comprimido"
...
            "value": "Optionen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Options"
          }
        },
        "es-mx": {
          "stringUnit": {
            "state": "translated",
            "value": "Opciones"
...
